samples/_failures_safe/1761344516_98b261_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ad75797.c: In function ‘main’:
./samples/SAFE/__tmp_8ad75797.c:121:60: error: expected ‘;’ at end of input
  121 |                 MATRIX_ELEM(result, i, j, cols2) = (int)sum
      |                                                            ^
      |                                                            ;
./samples/SAFE/__tmp_8ad75797.c:121:17: error: expected declaration or statement at end of input
  121 |                 MATRIX_ELEM(result, i, j, cols2) = (int)sum
      |                 ^~~~~~~~~~~
./samples/SAFE/__tmp_8ad75797.c:121:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ad75797.c:121:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ad75797.c:121:17: error: expected declaration or statement at end of input
